fixed overflow issues for responsiveness

--- a/client/src/components/_Home.scss
+++ b/client/src/components/_Home.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width:100vw;
     overflow-x: hidden;
+    overflow-y:hidden;
 }
 
 .mainpage{
@@ -21,6 +22,7 @@
     padding:0;
     background-size: cover;
     overflow-x: hidden;
+    
 }
 
 .datetext{
