--- a/client/src/components/_tickets.scss
+++ b/client/src/components/_tickets.scss
@@ -1,7 +1,8 @@
-.main{
+.mainTicket{
      min-height: 100vh;
      min-width: 100vw;
      background-size: auto;
+     overflow-y: unset;
 }
 
 .card{
